# cpp-opencl-lab

./: README.md  docker-compose.yml
misc/: build.sh
src/: CMakeLists.txt  Dockerfile  conanfile.macos.txt  conanfile.txt  config.cpp  main.cpp
src/include/: config.h
src/include/services/: jacobi_benchmark.h  jacobi_gpu_global.h  jacobi_gpu_local.h  jacobi_gpu_texture.h  jacobi_runner.h  kernels.h
src/services/: jacobi_benchmark.cpp  jacobi_gpu_global.cpp  jacobi_gpu_local.cpp  jacobi_gpu_texture.cpp  jacobi_kernels.cl  jacobi_runner.cpp
